name:                erll
version:             0.1.0.0
synopsis:            Mx, a language with linear types, to erlang compiler
-- description:
-- license:
-- license-file:
author:              Jean-Philippe Bernardy, Josef Svenningsson, Dan Rosén
-- maintainer:
-- copyright:
category:            Language
build-type:          Simple
cabal-version:       >=1.8

executable erll
  main-is:             Erll/Main.hs
  hs-source-dirs:      ./ sugar/
  -- other-modules:
  build-depends:       base >= 4,
                       random ==1.0.*,
                       geniplate ==0.6.*,
                       mtl ==2.1.*,
                       pretty ==1.1.*,
                       containers >=0.4,
                       lens ==3.9.*,
                       array ==0.4.*,
                       QuickCheck ==2.6.*,
                       safe,
                       pretty-show,
                       filepath,
                       process,
                       cmdargs
  build-tools:         alex, happy
